clang/test/BSC/Negative/OwnedStruct/access/owned-struct-generic-static-member-function.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct A{
_Public:
    int foo<T>(){ // expected-error {{expected ';' at end of declaration list}}
       return 5;
    }
};

int A::goo<T>(){
       return 6;
}


